# precursor

./: .clang-format  .clang-tidy  CMakeLists.txt  FetchCMocka.cmake  README.md  ansi_terminal.c  ansi_terminal.h  colour.c  colour.h  demo.c  terminal.c  terminal.h
.github/workflows/: clang-format.yaml  clang-tidy.yaml  cmake-multi-platform.yaml  cmake-multi-platform.yml  lint.yml  style.yaml
demos/: demo.c
precursor/: ansi_terminal.c  colour.c
src/: colour.c  colour.h  fragment.h  precursor_tests.c
test/: CMakeLists.txt  FetchCMocka.cmake  precursor_colour_tests.c  precursor_fragment_tests.c  precursor_tests.c
tests/: precursor_tests.c
