set(PRECURSOR_UNIT_TEST OFF BOOL "Build unit tests")
set(PRECURSOR_UNIT_TEST_BINARY "precursor_unit_tests")

function(add_unit_test source_file)
    set(unit_test_binary "precursor_${source_file}_unit_tests")
    add_executable("${unit_test_binary}" ${source_file})
    target_link_libraries("${unit_test_binary}" PRIVATE cmocka-static ${PRECURSOR_LIBRARY_NAME})
    target_include_directories("${unit_test_binary}" PRIVATE ${cmocka-header_SOURCE_DIR})
    add_test(NAME "Unit tests: ${source_file}" COMMAND "${unit_test_binary}" WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endfunction()

if (PRECURSOR_UNIT_TEST)
    include(FetchCMocka.cmake)
    add_unit_test(precursor_colour_tests.c)
    #add_unit_test(precursor_fragment_tests.c)
endif()
